--- a/scripts/final-project.Rmd
+++ b/scripts/final-project.Rmd
@@ -3,6 +3,8 @@ title: "DS421 semester 2 final project"
 author: "@xrwang"
 date: "5/3/2018"
 output: 
+  html_document:
+    keep_md: yes
   pdf_document:
     latex_engine: xelatex
 always_allow_html: yes
